[package]
name = "gsx"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-or-later"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
